--- a/src/__mainBox.pug
+++ b/src/__mainBox.pug
@@ -5,63 +5,81 @@ mixin mainBox
         
         .mainBox__itemOuter.mainBox__itemOuter_rightBox
           .mainBox__item
+            .rightBox__innerCover
+              img.kv-img(src="assets/img/w285h285.png", alt="")
+              img.kv-img(src="assets/img/w285h285.png", alt="")
             .rightBox__inner
-              img(src="assets/img/logo21.png", alt="")
+              img.logo140(src="assets/img/logo140w.png", alt="")
+              img.logo100(src="assets/img/logo100w.png", alt="")
               span Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda suscipit natus molestias, doloremque dolorem provident?
               a(href="#") Получить консультацию
-            img.rightBox__coverImg(src="assets/img/kv280.png", alt="")
+            //- .imgCoverBox
+            //-   img.kv-img(src="assets/img/w285h285.png", alt="")
+            //-   img.h-img(src="assets/img/w285h590.png", alt="")
+            //-   img.w-img(src="assets/img/w590h285.png", alt="")
         .mainBox__itemOuter.mainBox__itemOuter_big
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
         .mainBox__itemOuter
           a.mainBox__item(href="#")
             .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-              img(src="assets/img/kv280.png", alt="")
+              .imgCoverBox
+                img.kv-img(src="assets/img/w285h285.png", alt="")
             span Описание первого блока в несколько строчек
