--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -65,7 +65,7 @@ li.endLeftBlock {
   padding: 0.3125rem 0.625rem;
   align-items: center;
   justify-content: center;
-  background: var(--colorLightGrey);
+  background-color: var(--bg0);
   text-decoration: none;
   position: relative;
   display: none;
