--- a/src/masters.pug
+++ b/src/masters.pug
@@ -8,6 +8,7 @@ include __menu
 include __breadcrumbs
 include __wideBlock
 include __masters
+include __zBlocks
 
 include __footer
 
@@ -16,26 +17,27 @@ include __footer
 
 <!DOCTYPE html>
 html(lang="ru-RU")
-	+head
+  +head
 body
 
-	.site__header
-		+header
-		+topMenu
-		+breadcrumbs
-		+masters
-
-	.site__center
-		//- +slider1
-
-	.site__footer
-		+footer
+  .site__header
+    +header
+    +topMenu
 
 
-	+topMenuAdaptive
-	+search1
+  .site__center
+    +breadcrumbs
+    +masters
+    +zBlock1
 
-	+toUp
+  .site__footer
+    +footer
 
-	+scripts
+
+  +topMenuAdaptive
+  +search1
+
+  +toUp
+
+  +scripts
 	
