--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -72,7 +72,10 @@ h6 {
   margin-bottom: 0;
 }
 
-.content ul,
+.content ul {
+  padding: 0 0 15px 15px;
+}
+
 .content ol {
   padding: 0 0 15px 25px;
 }
@@ -84,7 +87,7 @@ h6 {
 }
 
 .content ul li {
-  list-style-image: url("../img/ulbg.png");
+  /* list-style-image: url("../img/ulbg.png"); */
 }
 
 .content blockquote {
@@ -107,7 +110,7 @@ h6 {
   text-decoration: underline;
 }
 
-.content ol {
+/* .content ol {
   counter-reset: li;
   padding: 0;
   list-style: none;
@@ -122,9 +125,9 @@ h6 {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
-}
+} */
 
-.content ol li:before {
+/* .content ol li:before {
   content: counter(li) ".";
   counter-increment: li;
   position: absolute;
@@ -132,12 +135,12 @@ h6 {
   width: 25px;
   text-align: right;
   display: inline-block;
-  color: var(--redFill);
+  color: var(--tc0);
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
-}
+} */
 
 .content img {
   max-width: 100%;
