--- a/src/blogPage.pug
+++ b/src/blogPage.pug
@@ -1,15 +1,14 @@
-- var pageTitle = 'Страница мастера'
+- var pageTitle = 'Блог'
 - var seoKeywords = 'Ключевые слова для страницы'
 - var seoDesc = 'Сео описание для страницы'
 
 include __const
 include __header
 include __menu
-include __breadcrumbs
-include __wideBlock
-
-include __master
-
+include __slider1
+include __mainBox
+include __blog
+include __newsInMain
 include __forms
 include __footer
 
@@ -25,14 +24,9 @@ body
     +header
     +topMenu
 
-
   .site__center
-    +breadcrumbs
-    //- +wideBlock
-    +master
-
-
-
+    +blogInBlogPage
+    +zBlock1
 
   .site__footer
     +footer
@@ -42,7 +36,7 @@ body
   +search1
 
   +toUp
-  
+
   +formCallBack
 
   +scripts
