--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -36,6 +36,11 @@
 }
 
 @media only screen and (max-width: 480px) {
+  .content img {
+    width: 100%;
+    float: none !important;
+    margin: 10px 0;
+  }
 }
 
 @media only screen and (max-width: 400px) {
