--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -21,6 +21,7 @@ h6 {
 
 h1 {
   font-size: 1.625rem;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -145,7 +146,7 @@ h6 {
 .content img {
   max-width: 100%;
   display: inline-block;
-  margin-bottom: 10px;
+  margin: 0 10px 10px 10px;
   height: auto;
 }
 
