--- a/src/assets/css/__slider1.css
+++ b/src/assets/css/__slider1.css
@@ -192,6 +192,15 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+.julySlider__item div {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .julySlider__item img {
   display: block;
   height: 100%;
