--- a/src/__procedure.pug
+++ b/src/__procedure.pug
@@ -17,6 +17,21 @@ mixin procedure
           .procedure__introImg__outer
             .procedure__introImg
               img(src="assets/img/temp/001.png", alt="")
+        
+        .procedure__masters
+          .title1
+            h2 Наши специалисты
+          .procedure__masterscontent
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
         .procedure__longContent
           .title1
             h2 Описание
