--- a/src/assets/css/__procedure.css
+++ b/src/assets/css/__procedure.css
@@ -39,6 +39,36 @@
   width: 100%;
 }
 
+.procedure__masters {
+  margin: 20px 0 0 0;
+}
+
+.procedure__masterscontent {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -5px;
+}
+
+.procedure__masterOuter {
+  padding: 5px;
+}
+
+.procedure__master {
+  display: flex;
+  padding: 0.625rem;
+  text-decoration: none;
+  width: 100%;
+  font-size: 1rem;
+  line-height: 1.3;
+  color: var(--tc0);
+  background: var(--x1greySuperLight);
+  transition: all 0.3s;
+}
+.procedure__master:hover {
+  background: var(--x1greyLight);
+}
+
 .link1 {
   font-size: 1.125rem;
   color: var(--link1);
