--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -370,3 +370,33 @@ li.endLeftBlock {
   border-bottom: 1px solid #fff;
   color: #fff;
 }
+
+.leftMenu li span {
+  display: block;
+  padding: 0.625rem;
+  text-decoration: none;
+  width: 100%;
+  font-size: 1rem;
+  line-height: 1.3;
+  color: var(--tc0);
+  background: var(--x1greySuperLight);
+  border-bottom: 1px solid var(--bg2);
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.leftMenu li.active span {
+  background: var(--color1);
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
+
+.leftMenu li span:hover {
+  background: var(--x1greyLight);
+}
+
+.leftMenu li.active span:hover {
+  background: var(--color1);
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
