--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -54,6 +54,9 @@
 @import "__news.css";
 @import "__news_media.css";
 
+@import "__contacts.css";
+@import "__contacts_media.css";
+
 @import "__footer.css";
 @import "__footer_media.css";
 
