--- a/src/assets/css/__gallery.css
+++ b/src/assets/css/__gallery.css
@@ -74,7 +74,7 @@
 
 } */
 
-.videoBox a:after {
+/* .videoBox a:after {
   content: "";
   position: absolute;
   top: 0;
@@ -87,18 +87,42 @@
   background-image: url(../img/play.png);
   opacity: 0;
   transition: all 0.3s;
-}
+} */
 
-.videoBox a:hover:after {
+/* .videoBox a:hover:after {
   opacity: 1;
-}
+} */
 
 .videoBox a {
   display: block;
+  text-decoration: none;
 }
 
 .videoBox a img {
   display: block;
   width: 100%;
   margin-bottom: 5px;
+}
+
+.videoBox a span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(112, 112, 112, 0.6);
+  opacity: 0;
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  text-align: center;
+  padding: 10px;
+  color: #fff;
+}
+
+.videoBox a:hover span {
+  opacity: 1;
 }
