--- a/src/assets/css/__masters_media.css
+++ b/src/assets/css/__masters_media.css
@@ -8,6 +8,9 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .mastersBox__itemOuter {
+    width: 33.333%;
+  }
 }
 
 @media only screen and (max-width: 920px) {
@@ -32,7 +35,7 @@
     padding: 5px;
   }
   .mastersBox__info {
-    height: 50%;
+    height: 40%;
   }
 }
 
