--- a/src/assets/css/__newsInMain.css
+++ b/src/assets/css/__newsInMain.css
@@ -51,6 +51,7 @@
   position: relative;
   background-size: cover;
   transition: all 0.3s;
+  background-position: center;
 }
 
 .newsInMainBox__img img {
