--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -33,7 +33,7 @@ mixin formInMaster
         input.name2(name='name2', type='text', placeholder='Ваше имя')
         input.surname2(name='surname2', type='text', placeholder='Ваша Фамилия')
         input.phone2(name='phone2', type='text', placeholder='Контактный телефон')
-        //- input.email1(name='email1', type='text', placeholder='Email')
+        input.email2(name='email2', type='text', placeholder='Email')
         input.work_email2(name='work_email2', type='text', placeholder='Рабочий email')
         //- textarea.message1(name='message1', cols='30', rows='10', placeholder='Ваше сообщение')
         .formPolycy__text
@@ -58,7 +58,7 @@ mixin formCallBack
           input.nameZ(name='nameZ', type='text', placeholder='Ваше имя')
           input.phoneZ(name='phoneZ', type='text', placeholder='Контактный телефон')
           //- input.email1(name='email1', type='text', placeholder='Email')
-          input.work_email2(name='work_emailZ', type='text', placeholder='Рабочий email')
+          input.work_emailZ(name='work_emailZ', type='text', placeholder='Рабочий email')
           //- textarea.message1(name='message1', cols='30', rows='10', placeholder='Ваше сообщение')
           .formPolycy__text
             | *Отправляя сообщение Вы соглашаетесь с условиями 
@@ -88,4 +88,30 @@ mixin formInContactsPage
           a(href='#', target='_blank')
           | политики конфиденциальности
         button.submit3(type='submit', name='submit3')
+          | Записаться
+
+
+
+mixin formConsInMain
+  .form4__area
+    .form4__wrapper
+      .form4__close
+        i.icon-close1
+      .form4__intro 
+        span 
+          | Закажите обратный звонок, заполнив форму ниже или позвоните нам по телефону 
+        a(href='tel:+78452260000') +7 (8452) 26-00-00.
+
+      form.form4(action='#')
+        input.name4(name='name4', type='text', placeholder='Ваше имя')
+        input.surname4(name='surname4', type='text', placeholder='Ваша Фамилия')
+        input.phone4(name='phone4', type='text', placeholder='Контактный телефон')
+        input.email4(name='email4', type='text', placeholder='Email')
+        input.work_email4(name='work_email4', type='text', placeholder='Рабочий email')
+        textarea.message4(name='message4', cols='30', rows='10', placeholder='Ваше сообщение')
+        .formPolycy__text
+          | *Отправляя сообщение Вы соглашаетесь с условиями 
+          a(href='#', target='_blank')
+          | политики конфиденциальности
+        button.submit4(type='submit', name='submit4')
           | Записаться
