--- a/src/__mainBox.pug
+++ b/src/__mainBox.pug
@@ -12,7 +12,7 @@ mixin mainBox
               img.logo140(src="assets/img/logo140w.png", alt="")
               img.logo100(src="assets/img/logo100w.png", alt="")
               span Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda suscipit natus molestias, doloremque dolorem provident?
-              a(href="#") Получить консультацию
+              a.mainConsBtn(href="#") Получить консультацию
             //- .imgCoverBox
             //-   img.kv-img(src="assets/img/w285h285.png", alt="")
             //-   img.h-img(src="assets/img/w285h590.png", alt="")
