--- a/src/assets/css/__mainBox.css
+++ b/src/assets/css/__mainBox.css
@@ -89,7 +89,7 @@
   position: relative;
   width: 100%;
   /* height: 590px; */
-  background: var(--color1);
+  background: var(--x1greySuperLight);
 }
 
 .rightBox__innerCover {
@@ -127,9 +127,11 @@
   font-size: 0.875rem;
   color: var(--tc0);
   background: #fff;
+  transition: all 0.3s;
 }
 .mainBox__itemOuter_rightBox .mainBox__item a:hover {
-  color: var(--color1);
+  color: #fff;
+  background: var(--link1);
 }
 
 /* .mainBox__itemOuter_rightBox .mainBox__item {
