--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -295,7 +295,7 @@ li.endLeftBlock {
   align-items: center;
   padding: 0 0.625rem;
   font-size: 0.875rem;
-  color: var(--color2);
+  /* color: var(--color2); */
   /* height: 2.875rem; */
   height: 2.5rem;
   width: 85%;
