--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -29,11 +29,23 @@ mixin footer
       .f4
         .footer__linksTitle Следите за нами в соцсетях
         .footerSGlinks
-          a(href='#')
-            i.icon-fb
-          a(href='#')
-            i.icon-vk
-          a(href='#')
-            i.icon-ok
-          a(href='#')
-            i.icon-ig
+          a(href="https://www.instagram.com/beauty_lounge_saratov/"  target="_blank")
+            span
+              i.icon-ig
+            p Центр косметологии и красоты
+          a(href="https://www.instagram.com/beauty_lounge_image/"  target="_blank")
+            span
+              i.icon-ig
+            p Имиджевый центр
+          a(href="https://www.instagram.com/beauty_lounge_cosmetology/"  target="_blank")
+            span
+              i.icon-ig
+            p Центр косметологии
+          //- a(href='#')
+          //-   i.icon-fb
+          //- a(href='#')
+          //-   i.icon-vk
+          //- a(href='#')
+          //-   i.icon-ok
+          //- a(href='#')
+          //-   i.icon-ig
