--- a/src/assets/css/__header.css
+++ b/src/assets/css/__header.css
@@ -115,6 +115,8 @@
   border: 1px solid var(--bg2);
   padding: 0.625rem 1.25rem;
   cursor: pointer;
+  white-space: nowrap;
+  margin-bottom: 5px;
 }
 .header__callAction:hover {
   border: 1px solid var(--color1);
@@ -133,29 +135,75 @@
   display: none;
 }
 
+.header__callAction2 {
+  display: flex;
+  border: 1px solid var(--bg2);
+  padding: 0.625rem 1.25rem;
+  cursor: pointer;
+  white-space: nowrap;
+  text-decoration: none;
+  width: 100%;
+  justify-content: center;
+}
+.header__callAction2:hover {
+  border: 1px solid var(--color1);
+}
+
+.header__callAction2 span {
+  font-size: 1rem;
+  color: var(--color1);
+}
+
+.header__callAction2 i {
+  font-size: 1.25rem;
+  color: var(--color1);
+  display: none;
+}
+
 .socialLink {
   display: flex;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+  align-items: flex-end;
 }
 
 .socialLink a {
-  width: 2rem;
-  height: 2rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  margin-bottom: 5px;
+}
+.socialLink a:last-child {
+  margin-bottom: 0;
+}
+
+.socialLink a:hover p {
+  text-decoration: underline;
+}
+
+.socialLink a p {
+  font-size: 0.75rem;
+  line-height: 1.3;
+  margin-right: 5px;
+  color: var(--tc0);
+  text-align: right;
+}
+
+.socialLink a span {
+  width: 1.75rem;
+  height: 1.75rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  margin: 0 2px;
-  opacity: 0.8;
-}
-.socialLink a:hover {
-  opacity: 1;
 }
 
-.socialLink a i {
+.socialLink a span i {
   /* color: var(--color1); */
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: #fff;
+  text-decoration: none !important;
 }
 
 .sVk {
@@ -163,7 +211,9 @@
 }
 
 .sIg {
-  background: #cc2779;
+  background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+  /* box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25); */
 }
 
 .sFb {
