--- a/src/assets/fonts/demo/style.css
+++ b/src/assets/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1m7qm1');
-  src:  url('fonts/icomoon.eot?1m7qm1#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1m7qm1') format('truetype'),
-    url('fonts/icomoon.woff?1m7qm1') format('woff'),
-    url('fonts/icomoon.svg?1m7qm1#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3qjibi');
+  src:  url('fonts/icomoon.eot?3qjibi#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3qjibi') format('truetype'),
+    url('fonts/icomoon.woff?3qjibi') format('woff'),
+    url('fonts/icomoon.svg?3qjibi#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,7 +13,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -25,9 +25,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-phone1:before {
-  content: "\e911";
-}
 .icon-arr-left1:before {
   content: "\e900";
 }
@@ -53,32 +50,110 @@
   content: "\e907";
 }
 .icon-ig:before {
-  content: "\e908";
-}
-.icon-marker1:before {
   content: "\e909";
 }
-.icon-more1:before {
+.icon-marker1:before {
   content: "\e90a";
 }
-.icon-ok:before {
+.icon-more1:before {
   content: "\e90b";
 }
-.icon-present1:before {
+.icon-ok:before {
   content: "\e90c";
 }
-.icon-search1:before {
+.icon-plus:before {
   content: "\e90d";
 }
-.icon-time1:before {
+.icon-present1:before {
   content: "\e90e";
 }
-.icon-up1:before {
+.icon-search1:before {
   content: "\e90f";
 }
-.icon-vk:before {
+.icon-time1:before {
   content: "\e910";
 }
-.icon-whatsapp:before {
-  content: "\ea93";
+.icon-up1:before {
+  content: "\e911";
+}
+.icon-vk:before {
+  content: "\e912";
+}
+.icon-calendar2:before {
+  content: "\e913";
+}
+.icon-paper-plane:before {
+  content: "\e914";
+}
+.icon-phone-call:before {
+  content: "\e915";
+}
+.icon-phone-call2:before {
+  content: "\e916";
+}
+.icon-twitter-logo-silhouette:before {
+  content: "\e917";
+}
+.icon-upload:before {
+  content: "\e918";
+}
+.icon-viber:before {
+  content: "\e919";
+}
+.icon-watsapp:before {
+  content: "\e91a";
+}
+.icon-youtube-logo:before {
+  content: "\e91b";
+}
+.icon-pencil2:before {
+  content: "\e91c";
+}
+.icon-credit-card:before {
+  content: "\e93f";
+}
+.icon-calendar:before {
+  content: "\e953";
+}
+.icon-user:before {
+  content: "\e971";
+}
+.icon-users:before {
+  content: "\e972";
+}
+.icon-user-plus:before {
+  content: "\e973";
+}
+.icon-user-minus:before {
+  content: "\e974";
+}
+.icon-user-check:before {
+  content: "\e975";
+}
+.icon-key:before {
+  content: "\e98d";
+}
+.icon-key2:before {
+  content: "\e98e";
+}
+.icon-gift:before {
+  content: "\e99f";
+}
+.icon-switch:before {
+  content: "\e9b6";
+}
+.icon-clipboard:before {
+  content: "\e9b8";
+}
+.icon-circle-up:before {
+  content: "\ea41";
+}
+.icon-circle-right:before {
+  content: "\ea42";
+}
+.icon-circle-down:before {
+  content: "\ea43";
+}
+.icon-circle-left:before {
+  content: "\ea44";
 }
