--- a/src/assets/css/__brands_media.css
+++ b/src/assets/css/__brands_media.css
@@ -17,12 +17,18 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .brands__itemOuter {
+    width: 25%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
 }
 
 @media only screen and (max-width: 480px) {
+  .brands__itemOuter {
+    width: 33.333%;
+  }
 }
 
 @media only screen and (max-width: 400px) {
