--- a/src/assets/css/__sevices.css
+++ b/src/assets/css/__sevices.css
@@ -55,7 +55,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.8);
   color: #000;
   font-size: 1rem;
   text-align: center;
@@ -65,5 +65,6 @@
 }
 
 .serv__item:hover span {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.9);
+  color: var(--color1);
 }
