--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -5,6 +5,8 @@ mixin footer
         .tm © "Бьюти Лаунж", 2020
         .oferta *Информация на сайте не является публичной офертой
         a.policy1(href='#') Политика конфиденциальности
+        .dev
+          a(href="mailto:zokrat@yandex.ru") Связаться с разработчиком
       .f2
         ul.footerMenu
           li
